--- a/_posts/2021-10-24-stochastic-descent.html
+++ b/_posts/2021-10-24-stochastic-descent.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/markdown-it-texmath/css/texmath.min.css">
 <link rel="stylesheet" href="file:///c:\Users\Jeff Wang\.vscode\extensions\goessner.mdmath-2.7.4\themes\default\style.css">
-
+<title>Machine Learning - Stochastic Descent and Minibatch Descent</title>
 </head>
 <body class="markdown-body">
 
